# gdal-openmpi-image-processing

./: .gitignore  CMakeLists.txt  CONSIGNA.md  README.md
include/: common.h  main.h  processes.h  strips.h
src/: main.c  processes.c  strips.c
